[gd_scene load_steps=48 format=2]

[ext_resource path="res://player/evolutron_001.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://hitbox_hurtbox/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://items/swordHitbox.gd" type="Script" id=4]
[ext_resource path="res://hitbox_hurtbox/hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/shadow.png" type="Texture" id=6]
[ext_resource path="res://engine/WhiteColorShader.shader" type="Shader" id=7]
[ext_resource path="res://player/powerups/nut/nut.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 5 )

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxPivot/Swordhitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "bite" ],
"method": "play_sfx"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "bite" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxPivot/Swordhitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "bite" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxPivot/Swordhitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "bite" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxPivot/Swordhitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 8 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 10 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.401 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "shot" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.401 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "shot" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.401 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "shot" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.401 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "shot" ],
"method": "play_sfx"
}, {
"args": [  ],
"method": "atack_animation_finished"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attackDown"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attackLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idleLeft"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idleDown"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idleRight"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "rangeRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "rangeUp"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "rangeLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "rangeDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=34]
states/attack/node = SubResource( 19 )
states/attack/position = Vector2( 568, 107 )
states/idle/node = SubResource( 24 )
states/idle/position = Vector2( 375, 107 )
states/range/node = SubResource( 29 )
states/range/position = Vector2( 375, 217 )
transitions = [ "idle", "attack", SubResource( 30 ), "attack", "idle", SubResource( 31 ), "idle", "range", SubResource( 32 ), "range", "idle", SubResource( 33 ) ]
start_node = "idle"
graph_offset = Vector2( 69, 60 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 5, 4 )

[sub_resource type="Animation" id=38]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=39]
resource_name = "Stop"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
Bullet = ExtResource( 8 )

[node name="shadow" type="Sprite" parent="."]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 6 )
offset = Vector2( 0, 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
vframes = 7
hframes = 6
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attackDown = SubResource( 3 )
anims/attackLeft = SubResource( 4 )
anims/attackRight = SubResource( 5 )
anims/attackUp = SubResource( 6 )
anims/idleDown = SubResource( 7 )
anims/idleLeft = SubResource( 8 )
anims/idleRight = SubResource( 9 )
anims/idleUp = SubResource( 10 )
anims/rangeDown = SubResource( 11 )
anims/rangeLeft = SubResource( 12 )
anims/rangeRight = SubResource( 13 )
anims/rangeUp = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 35 )
parameters/attack/blend_position = Vector2( 0, 0 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/range/blend_position = Vector2( 0, 0 )

[node name="hitboxPivot" type="Position2D" parent="."]
rotation = -1.5708

[node name="BulletPosition2D" type="Position2D" parent="hitboxPivot"]
position = Vector2( 4, -1.448e-05 )

[node name="Swordhitbox" parent="hitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 9, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="hitboxPivot/Swordhitbox" index="0"]
shape = SubResource( 36 )
disabled = true

[node name="hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 37 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 38 )
anims/Stop = SubResource( 39 )
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="hitboxPivot/Swordhitbox"]

[editable path="hurtbox"]
